--- a/Hypergram/task/src/index.html
+++ b/Hypergram/task/src/index.html
@@ -12,12 +12,18 @@
     </div>
     <div id="controls">
         <input id="file-input" type="file">
-        <label for="brightness">Brightness</label>
-        <input id="brightness" type="range">
-        <label for="contrast">Contrast</label>
-        <input id="contrast" type="range">
-        <label for="transparent">Transparent</label>
-        <input id="transparent" type="range">
+        <div class="controls">
+            <label for="brightness">Brightness</label>
+            <input id="brightness" type="range">
+        </div>
+        <div class="controls">
+            <label for="contrast">Contrast</label>
+            <input id="contrast" type="range">
+            </div>
+        <div class="controls">
+            <label for="transparent">Transparent</label>
+            <input id="transparent" type="range">
+        </div>
         <button id="save-button">SAVE IMAGE</button>
     </div>
 </main>
