Add: some hack for input file button

--- a/Hypergram/task/src/index.html
+++ b/Hypergram/task/src/index.html
@@ -11,7 +11,13 @@
         <canvas></canvas>
     </div>
     <div id="controls">
-        <input id="file-input" type="file">
+<!--        <input id="file-input" type="file">-->
+        <div>
+            <input type='file' id="file-input">
+<!--            <span id='val'></span>-->
+            <span id='button'>UPLOAD FILE</span>
+
+        </div>
         <div class="controls">
             <label for="brightness">Brightness</label>
             <input id="brightness" type="range">
